[tool.poetry]
name = "hanabi_rl"
version = "0.1.0"
description = ""
authors = ["silu71 <yuiitsu.hiki.107@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
