[tool.black]
line-length = 119

[tool.poetry]
name = "hanabi_rl"
version = "0.1.0"
description = ""
authors = ["silu71 <yuiitsu.hiki.107@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.21.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
